--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -19,10 +19,10 @@ http {
     # =========================================================================
     # FILE UPLOAD SETTINGS - REQUIRED FOR RAG
     # =========================================================================
-    client_max_body_size 20M;
-    client_body_buffer_size 20M;
-    client_body_timeout 120s;
-    proxy_request_buffering off;
+    client_max_body_size 20M;           # Allow uploads up to 20MB
+    client_body_buffer_size 20M;        # Buffer for request body
+    client_body_timeout 120s;           # Timeout for reading request body
+    proxy_request_buffering off;        # Stream uploads to backend (optional)
 
     # =========================================================================
     # DNS Resolver - Docker's internal DNS (enables failsafe startup)
@@ -31,15 +31,19 @@ http {
     resolver_timeout 5s;
 
     # =========================================================================
-    # CORS Origin Mapping - Regex-based (replaces 28-entry hardcoded map)
+    # CORS Origin Mapping - Regex-based
     # =========================================================================
     map $http_origin $cors_origin {
         default "";
-        "~^https?://(localhost|127\.0\.0\.1)(:\d+)?$"  $http_origin;
+
+        # Match http or https on localhost or 127.0.0.1 with any port
+        "~^https?://(localhost|127\.0\.0\.1)(:\d+)?$" $http_origin;
     }
 
     # =========================================================================
     # Rate Limiting
+    # Protects public-facing endpoints from abuse. The zone stores state for
+    # up to 10MB (~160k unique IPs). Rates can be tuned per-location.
     # =========================================================================
     limit_req_zone $binary_remote_addr zone=api_general:10m rate=30r/s;
     limit_req_zone $binary_remote_addr zone=auth_endpoints:10m rate=5r/s;
@@ -121,6 +125,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -131,12 +136,14 @@ http {
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
 
+            # Upload-specific settings
             client_max_body_size 20M;
             client_body_buffer_size 20M;
             client_body_timeout 300s;
             proxy_read_timeout 300s;
             proxy_send_timeout 300s;
 
+            # Failsafe: resolve at request time, not startup
             set $ai_backend "http://ai-orchestration-layer:8700";
             rewrite ^/ai/(.*) /$1 break;
             proxy_pass $ai_backend;
@@ -151,12 +158,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
 
+            # Important for multipart uploads
             proxy_http_version 1.1;
             proxy_set_header Connection "";
         }
 
         # =====================================================================
         # AI Orchestration Layer Routes
+        # No JWT required - AI backend handles its own auth if needed
         # =====================================================================
         location /ai/ {
             limit_req zone=ai_endpoints burst=10 nodelay;
@@ -172,6 +181,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -196,13 +206,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
 
+            # WebSocket support for streaming
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_read_timeout 86400;
         }
 
-        # AI WebSocket endpoint
+        # AI WebSocket endpoint (explicit for clarity)
         location /ai/ws/ {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -215,6 +226,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -256,6 +268,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -265,11 +278,14 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+            # Make sure to expose authorization header for jwt reuse
             add_header 'Access-Control-Expose-Headers' 'Authorization' always;
 
             set $cloudapp_backend "http://cloudapp:8099";
             proxy_pass $cloudapp_backend;
 
+            # Make sure to pass authorization header to Cloudapp, as user is fetched from jwt
             proxy_set_header Authorization $http_authorization;
             proxy_set_header traceparent $http_traceparent;
             proxy_set_header tracestate $http_tracestate;
@@ -293,6 +309,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -312,6 +329,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
 
+            # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -332,6 +350,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -371,6 +390,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -409,6 +429,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -447,6 +468,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
@@ -485,6 +507,7 @@ http {
                 return 204;
             }
 
+            # Hide upstream CORS headers to prevent duplicates
             proxy_hide_header Access-Control-Allow-Origin;
             proxy_hide_header Access-Control-Allow-Credentials;
             proxy_hide_header Access-Control-Allow-Methods;
