--- a/Dockerfile_BE
+++ b/Dockerfile_BE
@@ -1,7 +1,7 @@
 # ===========================================================================
 # Dockerfile_BE — Spring Boot Backend Services
 #
-# FIX (4.6): Added HEALTHCHECK using Spring Boot Actuator.
+# Added HEALTHCHECK using Spring Boot Actuator.
 # NEW (OpenTelemetry): Downloads the OTel Java agent at build time.
 #   The agent auto-instruments Spring MVC, WebClient, JPA, Kafka, and
 #   Resilience4j with zero code changes. Activation is controlled by
@@ -27,8 +27,8 @@ ARG SERVICE_PATH
 # Install curl for health checks
 RUN apk add --no-cache curl
 
-# Download OpenTelemetry Java agent
-ARG OTEL_AGENT_VERSION=2.12.0
+# Download OpenTelemetry Java agent (2.21+ required for declarative config)
+ARG OTEL_AGENT_VERSION=2.25.0
 ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/download/v${OTEL_AGENT_VERSION}/opentelemetry-javaagent.jar /opt/opentelemetry-javaagent.jar
 RUN chmod 644 /opt/opentelemetry-javaagent.jar
 
