--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -200,7 +200,7 @@ location ~ ^/cloudapp/user/(user-register|user-login|user-logout) {
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With, traceparent, tracestate' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN, X-Requested-With, traceparent, tracestate' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Max-Age' 86400;
         add_header 'Content-Length' 0;
@@ -215,7 +215,7 @@ location ~ ^/cloudapp/user/(user-register|user-login|user-logout) {
 
     add_header 'Access-Control-Allow-Origin' $cors_origin always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN' always;
     add_header 'Access-Control-Allow-Credentials' 'true' always;
     add_header 'Access-Control-Expose-Headers' 'Authorization' always;
 
@@ -316,7 +316,7 @@ location ~ ^/cloudapp/(?!.*(?:user-register|user-login|user-logout|ws)) {
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With, traceparent, tracestate' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN, X-Requested-With, traceparent, tracestate' always;
         add_header 'Access-Control-Allow-Credentials' 'true' always;
         add_header 'Access-Control-Max-Age' 86400;
         add_header 'Content-Length' 0;
@@ -331,7 +331,7 @@ location ~ ^/cloudapp/(?!.*(?:user-register|user-login|user-logout|ws)) {
 
     add_header 'Access-Control-Allow-Origin' $cors_origin always;
     add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN' always;
     add_header 'Access-Control-Allow-Credentials' 'true' always;
 
     set $cloudapp_backend "http://cloudapp:8099";
