Fix gateway auth regressions and stabilize E2E admin RBAC
- allow cookie-based auth on Petstore gateway routes in nginx tests
- expose mlops health endpoint without auth_request to keep health checks public
- add /user/admin/auth-check to the CloudApp OpenAPI snapshot and generated client metadata
- make Mongo init use environment-driven orchestration credentials for nightly infra
- restore same-origin /cloudapp API routing in the E2E shell test stack
- harden Playwright API proxying to forward tracked auth state for proxied backend calls
- prime admin session state before asserting admin-only route access in WebKit RBAC tests

Fix auth-related E2E regressions and restore AI health readiness

- exempt logout from CSRF enforcement and avoid auth-guard redirects during /logout
- clear injected multi-origin auth cookies in the Playwright proxy on logout
- route mlops and AI monitor test builds through same-origin API URLs in the E2E stack
- make proxied browser API calls consistently use tracked auth state in Playwright fixtures
- scope logout assertions to the shell-origin auth cookie
- add baseline admin auth-check stubbing for monitor tests
- expose /ai/health publicly for readiness checks while keeping the rest of /ai protected

Fix chat E2E routing and stabilize room flow assertions

- split chat WebSocket base URL from the general CloudApp API base URL
- pass NEXT_PUBLIC_CHAT_WS_API_URL through the frontend Docker build and runtime
- point the E2E shell chat socket path at the NGINX gateway in docker-compose.test.yml
- remove the room page render gate that waited on auth state before showing route-based room content
- make chat create/join Playwright assertions verify successful room-page load more robustly

--- a/contracts/openapi/cloudapp.json
+++ b/contracts/openapi/cloudapp.json
@@ -1025,6 +1025,26 @@
         ]
       }
     },
+    "/user/admin/auth-check": {
+      "get": {
+        "operationId": "adminAuthCheck",
+        "responses": {
+          "200": {
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            },
+            "description": "OK"
+          }
+        },
+        "tags": [
+          "user-controller"
+        ]
+      }
+    },
     "/user/admin/roles": {
       "post": {
         "operationId": "updateUserRoles",
