--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -22,6 +22,33 @@ location ~ ^/v1/(cloudapp-admin|cloudapp|petstore|vehicles|jiraproxy|mlops-segme
 # AI Orchestration Layer - RAG Upload Endpoint (SPECIFIC)
 # Must be before the general /ai/ location
 # =====================================================================
+location = /ai/health {
+    limit_req zone=api_general burst=5 nodelay;
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $ai_backend "http://ai-orchestration-layer:8700";
+    rewrite ^/ai/(.*) /$1 break;
+    proxy_pass $ai_backend;
+
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_redirect off;
+}
+
 location /ai/rag/documents/upload {
     limit_req zone=ai_endpoints burst=30 nodelay;
     auth_request /_auth/cloudapp/header-or-cookie;
@@ -721,6 +748,30 @@ location /jiraproxy {
 # =====================================================================
 # ML Ops Routes
 # =====================================================================
+location = /mlops-segmentation/health {
+    limit_req zone=api_general burst=5 nodelay;
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $mlops_backend "http://mlops-segmentation:8600";
+    proxy_pass $mlops_backend;
+
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+}
+
 location /mlops-segmentation {
     limit_req zone=api_general burst=10 nodelay;
     auth_request /_auth/cloudapp/header-or-cookie;
