--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -57,6 +57,8 @@ ARG NEXT_PUBLIC_REMOTE_PETSTORE_URL
 ENV NEXT_PUBLIC_REMOTE_PETSTORE_URL=${NEXT_PUBLIC_REMOTE_PETSTORE_URL:-http://localhost:5006}
 ARG NEXT_PUBLIC_API_URL
 ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:80/cloudapp}
+ARG NEXT_PUBLIC_CHAT_WS_API_URL
+ENV NEXT_PUBLIC_CHAT_WS_API_URL=${NEXT_PUBLIC_CHAT_WS_API_URL:-${NEXT_PUBLIC_API_URL:-http://localhost:80/cloudapp}}
 
 ARG SERVICE_PATH
 WORKDIR /app
@@ -77,7 +79,9 @@ RUN \
 FROM base AS runner
 ARG SERVICE_PORT
 ARG NEXT_PRIVATE_LOCAL_WEBPACK
+ARG NEXT_PUBLIC_CHAT_WS_API_URL
 ENV NEXT_PRIVATE_LOCAL_WEBPACK=$NEXT_PRIVATE_LOCAL_WEBPACK
+ENV NEXT_PUBLIC_CHAT_WS_API_URL=${NEXT_PUBLIC_CHAT_WS_API_URL}
 
 WORKDIR /app
 
